# sqrid

./: .gitignore  Cargo.toml  LICENSE  README.md  t
.github/: markdown-link-check.json
.github/workflows/: ci.yml
benches/: benchmark.rs  qaqr_benchmark.rs
src/: _sqrid.rs  lib.rs  sqrid.rs
src/sqrid/: astar.rs  base.rs  bf.rs  boundedint.rs  dir.rs  error.rs  grid.rs  gridarray.rs  gridbool.rs  int.rs  intbounded.rs  mappos.rs  mapqa.rs  misc.rs  mod.rs  mov.rs  num.rs  pos.rs  posdir.rs  postrait.rs  qa.rs  qaqr.rs  qr.rs  qrgrid.rs  setpos.rs  setqa.rs  traverser.rs  ucs.rs
tests/: bf_test.rs  bf_tests.rs  boundedint_tests.rs  dir_tests.rs  grid_tests.rs  gridbool_tests.rs  intbounded_tests.rs  misc_test.rs  mov_tests.rs  pos_tests.rs  qa_tests.rs  qaqr_tests.rs  qr_tests.rs  search_tests.rs  sqrid_tests.rs
