[package]
name = "sqrid"
description = "Square coordinates and grid-like arrays, with zero dependencies, in a single file"
version = "0.0.14"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/sqrid"
repository = "https://github.com/lpenz/sqrid"
categories = ["data-structures"]
keywords = ["grid", "square", "arrays"]

[lib]
bench = false

[dev-dependencies]
anyhow = "1.0.65"
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
