[package]
name = "sqrid"
description = "Square coordinates and grid-like arrays, with zero dependencies, in a single file"
version = "0.0.29"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/sqrid"
repository = "https://github.com/lpenz/sqrid"
categories = ["data-structures"]
keywords = ["grid", "square", "arrays"]

[lib]
bench = false

[dev-dependencies]
anyhow = "1.0.89"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
